# among-us

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: maze.vert  player.vert
src/: a.out  game.cpp  game.h  game_object.cpp  game_object.h  main.cpp  main2.cpp  maze.cpp  maze.h  myMaze.html  mymaze.html  player.cpp  player.h  resource_manager.cpp  resource_manager.h  text_renderer.cpp  text_renderer.h
